# LAPPD

./: README.md
lappd-g4-app/: CMakeLists.txt  init_vis.mac  run.mac  vis.mac
lappd-g4-app/include/: DetectorConstruction.hh  DetectorPVBuilder.hh  GpsPrimaryGeneratorAction.hh
lappd-g4-app/lappd/: CMakeLists.txt
lappd-g4-app/lappd/data/material_mpt/borosilicateGlass/: rIndex.txt
lappd-g4-app/lappd/data/surface_mpt/lappd/: imaginaryRIndex.txt  realRIndex.txt
lappd-g4-app/lappd/include/: LAPPDLVBuilder.hh  LAPPDLVFactory.hh  LAPPDMaterialFactory.hh
lappd-g4-app/lappd/macros/lappds/: lappd.mac
lappd-g4-app/lappd/macros/mpt/: air_mpt.mac  glass_mpt.mac  pmtVacuum_mpt.mac
lappd-g4-app/lappd/macros/os/: lappd_os.mac
lappd-g4-app/lappd/macros/vis/: lappd_vis.mac
lappd-g4-app/lappd/src/: LAPPDLVFactory.cc
lappd-g4-app/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorPVBuilder.cc  GpsPrimaryGeneratorAction.cc  PhotonSD.cc
lappd/data/surface_mpt/lappd/: efficiency.txt
lappd/include/: LAPPDLVBuilderMsgr.hh  LAPPDOSFactory.hh  LAPPDPVBuilder.hh
lappd/macros/lappds/: lappd.mac
lappd/macros/mpt/: borosilicateGlass_mpt.mac
lappd/macros/vis/: lappd_vis.mac
lappd/src/: LAPPDLVBuilder.cc  LAPPDLVBuilderMsgr.cc  LAPPDMaterialFactory.cc  LAPPDOSFactory.cc  LAPPDPVBuilder.cc
